tests/fixtures/invalid/bytes_bitor_int.py
# Cannot bitwise OR Bytes and Int
x: bytes = b"hello" | 1
